added property section

--- a/app/index.html
+++ b/app/index.html
@@ -158,7 +158,7 @@
                 </p>
               </div>
             </div>
-            <div class="benefit__item">
+            <div class="benefit__item benefit__item-4">
               <div class="benefit__num">4</div>
               <div class="benefit__img">
                 <img src="images/benefit-4.jpg" alt="">
@@ -183,14 +183,14 @@
       <section id="property" class="page-section property">
         <div class="container"> 
           <h3 class="property__title title">Характеристика</h3>
-          <div class="property__inner">
+          <div class="property__inner d-flex">
             <div class="property__content">
-              <div class="content__box">
+              <div class="content__box content__box-1">
                 <h4 class="content__box-title">Dlog-M 10 бит</h4>
                 <p class="content__box-txt">Mavic 2 Pro поддерживает цветовой профиль Dlog-M 10 бит с более широким динамическим диапазоном, дающим больше возможностей для цветокоррекции.
                 </p>
               </div>
-              <div class="content__box">
+              <div class="content__box content__box-2">
                 <h4 class="content__box-title">Камера Hasselblad</h4>
                 <p class="content__box-txt">Камера Hasselblad L1D-20С 
                     известны эргономичным дизайном 
@@ -198,28 +198,28 @@
                 </p>
               </div>
             </div>
-            <div class="property__item">
+            <div class="property__item property__item--center">
               <img src="images/mavic.png" alt="Mavic 2">
             </div>
             <div class="property__content">
-              <div class="content__box">
+              <div class="content__box content__box-3">
                 <h4 class="content__box-title">Матрица CMOS 1</h4>
                 <p class="content__box-txt">Зона активной работы новой 1-дюймовой матрицы CMOS в четыре раза превышает показатели Mavic Pro
                 </p>
               </div>
-              <div class="content__box">
+              <div class="content__box content__box-4">
                 <h4 class="content__box-title">Видео HDR</h4>
                 <p class="content__box-txt">Благодаря поддержке видео 4K HDR 10 бит, Mavic 2 Pro можно подсоединить к совместимому с HLG 4K ТВ и просматривать запись в полном цветовом спектре
                 </p>
               </div>
             </div>
           </div>
-        </div>
         <div class="scroll__btn">
           <a href="#query">
             <img src="images/icons/arrow-down.svg" alt="Arrow">
           </a>
         </div>
+      </div>
       </section>
 
       <section id="query" class="page-section query">
