--- a/app/index.html
+++ b/app/index.html
@@ -47,7 +47,7 @@
       </div>
     </header>
     <main>
-      <section class="top d-flex" style="background-image: url('images/top-bg.jpg')">
+      <section class="top d-flex" style="background-image: url('images/abstract.jpg')">
         <div class="container">
           <div class="top__content d-flex">
             <h1 class="top__title">Mavic 2 Pro</h1>
