--- a/app/index.html
+++ b/app/index.html
@@ -13,28 +13,33 @@
     <div class="content"> -->
     <header class="header" id="header">
       <div class="container">
-        <div class="header__top d-flex justify-content-between align-items-center">
-          <a href="index.html" class="logo" target="_self">
-            <picture class="logo-img">
-              <source src="images/logo-mobile.png" media="(max-width:640px)">
-              <img src="images/logo.png" alt="Logo">
-            </picture>
-          </a>
+        <div id="header__nav" class="header__top d-flex justify-content-between align-items-center">
+          <div data-menuanchor="top">
+            <a href="#top" class="logo" target="_self">
+              <picture class="logo-img">
+                <source srcset="images/logo-mobile.png" media="(max-width:640px)">
+                <img src="images/logo.png" alt="Logo">
+              </picture>
+            </a>
+          </div>
           <nav class="menu">
+            <button class="menu__btn">
+              <span class="menu__btn-line"></span>
+            </button>
             <ul class="menu__list d-flex justify-content-between align-items-center">
-              <li class="menu__list-item">
+              <li class="menu__list-item"  data-menuanchor="about">
                 <a class="menu__list-link" href="#about">О ДРОНЕ</a>  
               </li>
-              <li class="menu__list-item">
+              <li class="menu__list-item" data-menuanchor="benefit">
                 <a class="menu__list-link" href="#benefit">ПРЕИМУЩЕСТВА</a>  
               </li>
-              <li class="menu__list-item">
+              <li class="menu__list-item" data-menuanchor="property">
                 <a class="menu__list-link" href="#property">ХАРАКТЕРИСТИКА</a>  
               </li>
-              <li class="menu__list-item">
+              <li class="menu__list-item" data-menuanchor="query">
                 <a class="menu__list-link" href="#query">ВОПРОСЫ</a>  
               </li>
-              <li class="menu__list-item">
+              <li class="menu__list-item" data-menuanchor="contact">
                 <a class="menu__list-link" href="#contact">КОНТАКТЫ</a>  
               </li>
             </ul>
@@ -47,39 +52,41 @@
       </div>
     </header>
     <main id="fullpage">
-      <section class="page-section top d-flex" style="background-image: url('images/abstract.jpg')">
-        <div class="container">
-          <div class="top__content d-flex">
-            <h1 class="top__title">Mavic 2 Pro</h1>
-            <img class="top__img" src="images/mavic.png" alt="Mavic 2">
-            <p class="top__txt">Квадрокоптер Dji Mavic 2 Pro
-            с профессиональной камерой Hasselblad</p>
-            <ul class="social-list d-flex">
-              <li class="social-list-item">
-                <a href="#" class="social-fb" target="_blank">
-                  <img src="images/icons/fb.svg" alt="Facebook">
+      <section data-anchor="top" class="page-section top-page d-flex" style="background-image: url('images/abstract.jpg')">
+        <div class="page-section__wrapper top-page__wrapper">
+          <div class="container">
+            <div class="top-page__content d-flex">
+              <h1 class="top-page__title">Mavic 2 Pro</h1>
+              <img class="top-page__img" src="images/mavic.png" alt="Mavic 2">
+              <p class="top-page__txt">Квадрокоптер Dji Mavic 2 Pro <br>
+              с профессиональной камерой Hasselblad</p>
+              <ul class="social-list d-flex">
+                <li class="social-list-item"> 
+                  <a href="#" class="social-fb" target="_blank">
+                    <img src="images/icons/fb.svg" alt="Facebook">
+                  </a>
+                </li> 
+                <li class="social-list-item">
+                  <a href="#" class="social-yt" target="_blank">
+                    <img src="images/icons/yt.svg" alt="Youtube">
+                  </a>
+                </li> 
+                <li class="social-list-item">
+                  <a href="#" class="social-ig" target="_blank">
+                    <img src="images/icons/ig.svg" alt="Instagram">
+                  </a>
+                </li> 
+              </ul>
+              <div class="scroll__btn">
+                <a href="#about">
+                  <img src="images/icons/arrow-down.svg" alt="Arrow">
                 </a>
-              </li> 
-              <li class="social-list-item">
-                <a href="#" class="social-yt" target="_blank">
-                  <img src="images/icons/yt.svg" alt="Youtube">
-                </a>
-              </li> 
-              <li class="social-list-item">
-                <a href="#" class="social-ig" target="_blank">
-                  <img src="images/icons/ig.svg" alt="Instagram">
-                </a>
-              </li> 
-            </ul>
-            <div class="scroll__btn">
-              <a href="#about">
-                <img src="images/icons/arrow-down.svg" alt="Arrow">
-              </a>
+              </div>
             </div>
           </div>
         </div>
       </section>
-      <section id="about" class="page-section about">
+      <section data-anchor="about" class="page-section about">
         <div class="container"> 
           <h3 class="about__title title">Что такое Mavic 2 Pro?</h3>
           <div class="about__inner d-flex justify-content-between">
@@ -119,7 +126,7 @@
         </div>
       </section>
 
-      <section id="benefit" class="page-section benefit">
+      <section data-anchor="benefit" class="page-section benefit">
         <div class="container"> 
           <h3 class="benefit__title title">Преимущества</h3>
           <div class="benefit__items d-flex">
@@ -180,7 +187,7 @@
           </a>
         </div>
       </section>
-      <section id="property" class="page-section property">
+      <section data-anchor="property" class="page-section property">
         <div class="container"> 
           <h3 class="property__title title">Характеристика</h3>
           <div class="property__inner d-flex">
@@ -222,7 +229,7 @@
       </div>
       </section>
 
-      <section id="query" class="page-section query">
+      <section data-anchor="query" class="page-section query">
         <div class="container"> 
           <h3 class="query__title title">Остались вопросы?</h3>
           <div class="query__items">
@@ -262,7 +269,7 @@
           </a>
         </div>
       </section>
-      <section id="contact" class="page-section contact">
+      <section data-anchor="contact" class="page-section contact">
         <div class="container"> 
           <h3 class="contact__title title">Контакты</h3>
           <div class="contact__inner d-flex">
@@ -313,7 +320,7 @@
               </li> 
             </ul>
           </div>
-          <footer id="footer" class="footer">
+          <footer class="footer">
             <div class="copy">
               &#169; DJI, 2020
             </div>
@@ -321,12 +328,6 @@
         </div>
       </section>
     </main>
-  </div>
-  <!-- <footer class="footer">
-    <div class="container">
-      
-    </div>
-  </footer> -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/libs.min.js"></script>
   <script src="js/main.js"></script>
